--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> 
     <head><title>Hello world</title></head>	
     <script src="/socket.io/socket.io.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
@@ -24,12 +24,16 @@
         });
         socket.on('userSet', function(data){
             user = data.username;			
-            document.getElementById('main').innerHTML = '<div onKeyPress="return checkSubmit(event)"><div class="alert alert-danger"><%= message %> Users Connceted</div>\
+            document.getElementById('main').innerHTML = '<div onKeyPress="return checkSubmit(event)"><div id="user_count"class="alert alert-danger"></div>\
 			<i style="color:red;">'+ user + ' </i> : <input type="text" id="message">\
             <button type="button" name="button" onclick="sendMessage()" >Send</button>\
             <table id="one"><tbody id="message-container"></tbody></table>\
 			</div>';		
         });
+		socket.on('news', function (data) { 
+					console.log(data);
+					document.getElementById('user_count').innerHTML=data.message;
+			});
         function sendMessage(){
             var msg = document.getElementById('message').value;
             if(msg){
@@ -40,7 +44,7 @@
 				// setting focus on text box every time
 				document.getElementById("message").focus();
             }		
-			console.log(msg);			
+			// insert ELSE logic here	
         }
 		 
 		function checkSubmit(e) {
